--- a/components/Column.scss
+++ b/components/Column.scss
@@ -1,3 +1,4 @@
 .Column {
-  flex: 1 0 50%;
+  width: 100%;
+  height: 100%;
 }
