--- a/components/ColumnsContainer.scss
+++ b/components/ColumnsContainer.scss
@@ -3,7 +3,8 @@
   flex-flow: row nowrap;
   justify-content: space-around;
   text-align: center;
-  border-right: solid gray 1px;
+  width: 100%;
+  height: 100%;
 
   h3.queue {
     color: rgb(71,67,68);
@@ -24,6 +25,12 @@
     font-size: 17px;
     font-family: 'Lato', sans-serif;
     letter-spacing: 1px;
+  }
+
+  .ColumnWrapper {
+    width: 33%;
+    margin-right: 10px;
+    margin-left: 10px;
   }
 
 
